<resources>
    <string name="app_name">Weathe AppWorld</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="f">°F</string>
    <string name="c">C°</string>
    <string name="m_sec">m/sec</string>
    <string name="mile_h">mile/h</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="cairo">Cairo</string>
    <string name="wind">Wind</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="location_header">Location</string>
    <string name="units_header">Unit</string>
    <string name="language_header">Language</string>

    <!-- Location Preferences -->
    <string name="location_title">Default location</string>

    <!-- Unit Preferences -->
    <string name="units_title">Default unit</string>
    <string name="fahrenheit">°F</string>
    <string name="celsius">°C</string>
    <string name="kelvin">°K</string>

    <!-- Speed Preferences -->
    <string name="mh">mile/h</string>
    <string name="ms">m/s</string>

    <!-- Unit Preferences -->
    <string name="language_title">Default language</string>
    <string name="noBtn">Cancel</string>
    <string name="yesBtn">OK</string>
    <string name="title_activity_favorite_map">Map</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="alertEventHint">Event</string>
    <string name="alertType">Type</string>
    <string name="alertTimeLbl">Time</string>
    <string name="addBtn">Add Alert</string>

    <string name="channel_name">Weather Forecast</string>
    <string name="channel_description">Home</string>
    <string name="WeatherForecast">Weather Forecast</string>
    <string name="Home">Home</string>
    <string name="Setting">Settings</string>
    <string name="Favorite">Favorite</string>
    <string name="Alert">Alert</string>
    <string name="Humidity">Humidity</string>
    <string name="Precipitation">Precipitation</string>
    <string name="Pressure">Pressure</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="CloudCover">Cloud Cover</string>
    <string name="Visibility">Visibility</string>
    <string name="max">max: </string>
    <string name="min">min: </string>
    <string name="clouds">clouds: </string>
    <string name="forecast">Forecast</string>
    <string name="weather">Weather</string>
    <string name="alarm">Alarm</string>
    <string name="hourlyForecast">Hourly Forecast</string>
    <string name="dailyforecast">Daily Forecast</string>
    <string name="temp">temp</string>
    <string name="discription">sunny</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">pressure</string>
    <string name="unit">Unit</string>
    <string name="search_any_country">Search Any Country...</string>
    <string name="select_date">Select Date</string>
    <string name="save">save</string>
    <string name="time_from">Time From</string>
    <string name="time_to">Time To</string>
    <string name="date">Date</string>
    <string name="finished">finished</string>
    <string name="settings">Settings</string>

</resources>