<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111840"
    android:orientation="vertical"
    tools:context=".ui.fragments.SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#111840"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/settings"
        app:titleTextColor="@color/white">


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:backgroundTint="#1D2868"
            app:cardCornerRadius="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="27dp"
                android:textStyle="bold"></TextView>

            <RadioGroup
                android:id="@+id/location"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textlocation"
                android:layout_gravity="center_vertical">

                <RadioButton
                    android:id="@+id/gps"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/gps"
                    android:textColor="@color/white"

                    android:textSize="20sp"></RadioButton>

                <RadioButton
                    android:id="@+id/map"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:text="@string/map"
                    android:textColor="@color/white"
                    android:textSize="20sp"></RadioButton>
            </RadioGroup>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:backgroundTint="#1D2868"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:text="@string/unit"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"></TextView>

            <RadioGroup
                android:id="@+id/unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textlocation"
                android:layout_gravity="center_vertical">

                <RadioButton
                    android:id="@+id/c"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/c"
                    android:textColor="@color/white"
                    android:textSize="20sp"></RadioButton>

                <RadioButton
                    android:id="@+id/f"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:text="@string/f"

                    android:textColor="@color/white"
                    android:textSize="20sp"></RadioButton>
            </RadioGroup>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/materialCardView"
            android:layout_margin="12dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:backgroundTint="#1D2868"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            app:layout_constraintVertical_bias="0.191">

            <TextView
                android:id="@+id/texewind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:text="@string/wind"
                android:textColor="@color/white"
                android:textSize="27dp"
                android:textStyle="bold"></TextView>

            <RadioGroup
                android:id="@+id/wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/texewind"
                android:layout_gravity="center_vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/m_sec"
                    android:textColor="@color/white"
                    android:textSize="20sp"></RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/mile_h"
                    android:textColor="@color/white"
                    android:textSize="20sp"></RadioButton>
            </RadioGroup>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView4"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/materialCardView"
            android:layout_margin="12dp"
            android:layout_toEndOf="@+id/materialCardView3"
            android:layout_weight="1"
            app:cardBackgroundColor="#1D2868"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toEndOf="@+id/materialCardView3"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
            app:layout_constraintVertical_bias="0.19">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="23dp"
                android:textStyle="bold"></TextView>

            <RadioGroup
                android:id="@+id/languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textlocation"
                android:layout_gravity="center_vertical">

                <RadioButton
                    android:id="@+id/ar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/arabic"
                    android:textColor="@color/white"
                    android:textSize="20sp"></RadioButton>

                <RadioButton
                    android:id="@+id/en"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:text="@string/english"

                    android:textColor="@color/white"
                    android:textSize="20sp"></RadioButton>
            </RadioGroup>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</LinearLayout>