<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141932"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AlertFragment">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/datePicker"
            app:layout_constraintTop_toBottomOf="@+id/datePicker"
            app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/timePicker_from"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/time_from"
                    android:hint="Time From"
                    android:textSize="24sp"
                    android:timePickerMode="spinner"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/timePicker_to"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/time_to"
                    android:hint="Time To"
                    android:textSize="24sp"
                    android:timePickerMode="spinner"
                    android:visibility="visible" />


        </LinearLayout>

        <TextView
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_height="50dp"
            android:text="@string/select_date"
            android:hint="Select Date"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_margin="14dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="24sp"
            android:timePickerMode="spinner"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:layout_editor_absoluteX="15dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewAlerts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            tools:listitem="@layout/alert_row"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save" />


</androidx.constraintlayout.widget.ConstraintLayout>